<resources>
    <string name="photoeditor_name">Photo Studio</string>
    <string name="loading_failure">Photo cannot be loaded</string>
    <string name="saving_failure">Photo cannot be saved</string>
    <string name="photo_saved">照片已保存到 %s</string>
    <string name="edited_photo_bucket_name">已修改图片</string>
    <string name="save_photo">Save edited photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">SAVE</string>
    <string name="autofix">Auto-fix</string>
    <string name="crop">Crop</string>
    <string name="crossprocess">Cross-process</string>
    <string name="documentary">Documentary</string>
    <string name="doodle">Doodle</string>
    <string name="duotone">Duo-tone</string>
    <string name="facelift">Face Glow</string>
    <string name="facetan">Face Tan</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fisheye</string>
    <string name="flip">Flip</string>
    <string name="grain">Film Grain</string>
    <string name="grayscale">B&amp;W</string>
    <string name="highlight">Highlights</string>
    <string name="lomoish">Lomo</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="redeye">Red Eye</string>
    <string name="rotate">Rotate</string>
    <string name="saturation">Saturation</string>
    <string name="sepia">Sepia</string>
    <string name="shadow">Shadows</string>
    <string name="sharpen">Sharpen</string>
    <string name="straighten">Straighten</string>
    <string name="temperature">Warmth</string>
    <string name="tint">Tint</string>
    <string name="vignette">Vignette</string>
    <string name="crop_tooltip">Drag markers to crop photo</string>
    <string name="doodle_tooltip">Draw on photo to doodle</string>
    <string name="flip_tooltip">Drag photo to flip it</string>
    <string name="redeye_tooltip">Tap to remove red eyes</string>
    <string name="rotate_tooltip">Drag photo to rotate it</string>
    <string name="straighten_tooltip">Drag photo to straighten it</string>
    <string name="app_name">Gallery</string>
    <string name="video_app_name">Video</string>
    <string name="gadget_title">Picture frame</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="movie_view_label">Video player</string>
    <string name="loading_video">Loading video…</string>
    <string name="loading_image">Loading image…</string>
    <string name="loading_account">Loading account…</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="loading">Loading…</string>
    <string name="fail_to_load">"Couldn't load"</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="crop_save_text">OK</string>
    <string name="multiface_crop_help">Touch a face to begin.</string>
    <string name="saving_image">Saving picture…</string>
    <string name="save_error">"Couldn't save cropped image."</string>
    <string name="crop_label">Crop picture</string>
    <string name="select_image">Select photo</string>
    <string name="select_video">Select video</string>
    <string name="select_item">Select item(s)</string>
    <string name="select_album">Select album(s)</string>
    <string name="select_group">Select group(s)</string>
    <string name="set_image">Set picture as</string>
    <string name="wallpaper">Setting wallpaper…</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="slideshow">Slideshow</string>
    <string name="details">Details</string>
    <string name="details_title">%1$d of %2$d items:</string>
    <string name="close">Close</string>
    <string name="switch_to_camera">Switch to Camera</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="no_such_item">"Couldn't find item."</string>
    <string name="edit">Edit</string>
    <string name="activity_not_found">No app is available to complete the action.</string>
    <string name="process_caching_requests">Processing caching requests</string>
    <string name="caching_label">Caching…</string>
    <string name="crop_action">Crop</string>
    <string name="set_as">Set as</string>
    <string name="video_err">"Can't play video."</string>
    <string name="group_by_location">By location</string>
    <string name="group_by_time">By time</string>
    <string name="group_by_tags">By tags</string>
    <string name="group_by_faces">By people</string>
    <string name="group_by_album">By album</string>
    <string name="group_by_size">By size</string>
    <string name="untagged">Untagged</string>
    <string name="no_location">No location</string>
    <string name="no_connectivity">"Some locations couldn't be identified due to network problems."</string>
    <string name="sync_album_error">Failed to download the photos in this album. Please retry later.</string>
    <string name="sync_album_set_error">Failed to download the list of albums. Please retry later.</string>
    <string name="show_images_only">Images only</string>
    <string name="show_videos_only">Videos only</string>
    <string name="show_all">Images and videos</string>
    <string name="appwidget_title">Photo Gallery</string>
    <string name="appwidget_empty_text">No photos.</string>
    <string name="crop_saved">Cropped image saved to Downloads.</string>
    <string name="crop_not_saved">"Cropped image wasn't saved."</string>
    <string name="no_albums_alert">No albums available.</string>
    <string name="empty_album">There is no items in your collect.</string>
    <string name="picasa_posts">Posts</string>
    <string name="make_available_offline">Make available offline</string>
    <string name="sync_picasa_albums">Refresh</string>
    <string name="done">Done</string>
    <string name="sequence_in_set">%1$d of %2$d items:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="try_to_set_local_album_available_offline">This item is stored locally and available offline.</string>
    <string name="set_label_all_albums">All albums</string>
    <string name="set_label_local_albums">Local albums</string>
    <string name="set_label_mtp_devices">MTP devices</string>
    <string name="set_label_picasa_albums">Picasa albums</string>
    <string name="free_space_format">%s free</string>
    <string name="size_below">%1$s or below</string>
    <string name="size_above">%1$s or above</string>
    <string name="size_between">%1$s to %2$s</string>
    <string name="Import">Import</string>
    <string name="import_complete">Import complete</string>
    <string name="import_fail">Import unsuccessful</string>
    <string name="camera_connected">Camera connected.</string>
    <string name="camera_disconnected">Camera disconnected.</string>
    <string name="click_import">Touch here to import</string>
    <string name="widget_type_album">Images from an album</string>
    <string name="widget_type_shuffle">Shuffle all images</string>
    <string name="widget_type_photo">Choose an image</string>
    <string name="widget_type">Widget type</string>
    <string name="slideshow_dream_name">Slideshow</string>
    <string name="albums">Albums</string>
    <string name="times">Times</string>
    <string name="locations">Locations</string>
    <string name="people">People</string>
    <string name="tags">Tags</string>
    <string name="group_by">Group by</string>
    <string name="settings">Settings</string>
    <string name="add_account">Add account</string>
    <string name="gif_is_too_big">sorry!the gif is too big to display</string>
    <string name="invalid_format">Invalid format:failed to parse and play the file</string>
    <string name="camera_setas_keyguard_wallpaper">Keyguard wallpaper</string>
    <string name="camera_setas_LauncherMenu_wallpaper">Menu Wallpaper</string>
    <string name="sync_item_error">"This picture has been removed，can't display !"</string>
    <string name="sd_myalbum_path">/mnt/sdcard/我的相机</string>
    <string name="external_sd_myalbum_path">/mnt/sdcard/external_sd/我的相机</string>
    <string name="sd_collectpic_path">/mnt/sdcard/Coolpad/图片收藏</string>
    <string name="external_sd_collectpic_path">/mnt/sdcard/external_sd/Coolpad/图片收藏</string>
    <string name="sd_download_path">/mnt/sdcard/Download</string>
    <string name="external_sd_download_path">/mnt/sdcard/external_sd/Download</string>
    <string name="sd_section_path">/mnt/sdcard/Coolpad/截屏图片</string>
    <string name="external_sd_section_path">/mnt/sdcard/external_sd/Coolpad/截屏图片</string>
    <string name="sd_bluetooth_path">/mnt/sdcard/bluetooth</string>
    <string name="external_sd_bluetooth_path">/mnt/sdcard/external_sd/bluetooth</string>
    <string name="sd_modified_path">/mnt/sdcard/Coolpad/已修改图片</string>
    <string name="external_sd_modified_path">/mnt/sdcard/external_sd/Coolpad/已修改图片</string>
    <string name="sd_weibo_path">/mnt/sdcard/Coolpad/通讯录/微博图片</string>
    <string name="external_sd_weibo_path">/mnt/sdcard/external_sd/Coolpad/通讯录/微博图片</string>
    <string name="sd_mms_path">/mnt/sdcard/Coolpad/信息</string>
    <string name="external_sd_mms_path">/mnt/sdcard/external_sd/Coolpad/信息</string>
    <string name="sd_gallery_path">/mnt/sdcard/Coolpad/图库/图库图片</string>
    <string name="external_sd_gallery_path">/mnt/sdcard/external_sd/Coolpad/图库/图库图片</string>
    <string name="sd_browser_path">/mnt/sdcard/我的下载/浏览器图片</string>
    <string name="external_sd_browser_path">/mnt/sdcard/external_sd/我的下载/浏览器图片</string>
    <string name="sd_email_path">/mnt/sdcard/Coolpad/邮件/邮件图片</string>
    <string name="external_sd_email_path">/mnt/sdcard/external_sd/Coolpad/邮件/邮件图片</string>
    <string name="sd_wallpaper_path">/mnt/sdcard/coolpad/Coolshow/wallpaper</string>
    <string name="external_sd_wallpaper_path">/mnt/sdcard/external_sd/Coolpad/coolshow/wallpaper</string>
    <string name="gps_pic">Location</string>
    <string name="gps_pic_number">Pictures</string>
    <string name="empty_video">O videos available.</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="copy_to_clipboard_ok">Copied to clipboard</string>
    <string name="copy_to_clipboard_failed">Failed to copy image</string>
    <string name="copy_to_clipboard_is_too_big">Sorry!The photo is too big to copy</string>
</resources>