<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/EffectsContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.gallery3d.photoeditor.actions.CrossProcessAction style="@style/Effect">
        <ImageButton android:id="@id/effect_button" android:src="@drawable/photoeditor_effect_crossprocess" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/crossprocess" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.CrossProcessAction>
    <com.android.gallery3d.photoeditor.actions.PosterizeAction style="@style/Effect">
        <ImageButton android:id="@id/effect_button" android:src="@drawable/photoeditor_effect_posterize" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/posterize" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.PosterizeAction>
    <com.android.gallery3d.photoeditor.actions.LomoishAction style="@style/Effect">
        <ImageButton android:id="@id/effect_button" android:src="@drawable/photoeditor_effect_lomoish" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/lomoish" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.LomoishAction>
    <com.android.gallery3d.photoeditor.actions.DocumentaryAction style="@style/Effect">
        <ImageButton android:id="@id/effect_button" android:src="@drawable/photoeditor_effect_documentary" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/documentary" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.DocumentaryAction>
    <com.android.gallery3d.photoeditor.actions.GrainAction style="@style/Effect">
        <ImageButton android:id="@id/effect_button" android:src="@drawable/photoeditor_effect_grain" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/grain" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.GrainAction>
</LinearLayout>